--- a/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/upload_certificate.yml
+++ b/playbooks/oracle_ssl_wallet/oracle_ssl_wallet/tasks/upload_certificate.yml
@@ -2,6 +2,10 @@
 # inside an Oracle Auto Login Wallet (.sso file) - do not provide the base PEM file.
 # In the context of DMS this wallet is called a certificate.
 
+# We only need to include the root certificate as this wallet is used on the client side.
+# We therefore do not need the private key, and there is no leaf certificate in this
+# set-up.
+
 - name: Upload Certificate from Primary Host
   when: database_primary_sid is defined
   block:
