--- a/.github/workflows/oracle-db-mis-configuration-artefacts.yml
+++ b/.github/workflows/oracle-db-mis-configuration-artefacts.yml
@@ -125,6 +125,7 @@ jobs:
             playbooks/delius_users
             playbooks/delius-artefacts-playbook.yml
             playbooks/ansible.cfg
+            common/*
           path: operations
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
