Correct env variable name

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
@@ -83,7 +83,7 @@
       ansible.builtin.command: >
         {{ emcli_script }}
       environment:
-        EMCTL_COMMANDS: '{{ emcli }} modify_named_credential -cred_name=OEM_DB -cred_type=DBCreds -test -attributes="DBUserName:sysman;DBRole:Normal;DBPassword:${SYSMAN_PASSWORD}"'
+        EMCLI_COMMANDS: '{{ emcli }} modify_named_credential -cred_name=OEM_DB -cred_type=DBCreds -test -attributes="DBUserName:sysman;DBRole:Normal;DBPassword:${SYSMAN_PASSWORD}"'
       register: update_name_credential
       failed_when: update_name_credential.rc != 0
 # - name: Create New Password for Nodemanager
