--- a/playbooks/oracle_release_update/update_oem/tasks/delete_old_target.yml
+++ b/playbooks/oracle_release_update/update_oem/tasks/delete_old_target.yml
@@ -31,25 +31,27 @@
         . {{ stage }}/emcli_login.sh >/dev/null
         {{ emcli }} delete_target -name="{{ existing_target_name.stdout }}" -type="{{ target_type }}"
 
-    - name: Copy SQL Script to Wait for Target Deletion
-      template:
-        src: wait_for_target_deletion.sql.j2
-        dest: "{{ stage }}/wait_for_target_deletion.sql"
-        mode: "0600"
-      vars:
-        deletion_target: "{{ existing_target_name.stdout }}"
+    # - name: Copy SQL Script to Wait for Target Deletion
+    #   template:
+    #     src: wait_for_target_deletion.sql.j2
+    #     dest: "{{ stage }}/wait_for_target_deletion.sql"
+    #     mode: "0600"
+    #   vars:
+    #     deletion_target: "{{ existing_target_name.stdout }}"
 
     # Pause Until OEM has Finished Deleting the Target
     # (Otherwise it will fail when we try to add the new target)
-    - name: Wait for Existing Target Deletion
-      shell: |
-        . {{ stage }}/emcli_login.sh >/dev/null
-        {{ emcli }} execute_sql -sql="FILE" -input_file="FILE:{{ stage }}/wait_for_target_deletion.sql" -targets="EMREP:oracle_database"
+    # - name: Wait for Existing Target Deletion
+    #   shell: |
+    #     . {{ stage }}/emcli_login.sh >/dev/null
+    #     {{ emcli }} execute_sql -sql="FILE" -input_file="FILE:{{ stage }}/wait_for_target_deletion.sql" -targets="EMREP:oracle_database"
 
-    - name: Check Target Has Been Deleted
+    - name: Wait for Existing Target Deletion
       shell: |
         . {{ stage }}/emcli_login.sh >/dev/null
         {{ emcli }} get_targets -targets="{{ existing_target_name.stdout }}:{{ target_type }}" -noheader -script | wc -l
       register: target_deleted
-      failed_when: target_deleted.rc > 0 or target_deleted.stdout | int > 0
+      until: target_deleted.stdout | int == 0
+      retries: 20
+      delay: 60
       changed_when: false
