--- a/playbooks/oracle_release_update/oracle_release_update/tasks/get_versioning_information.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/get_versioning_information.yml
@@ -148,3 +148,8 @@
 
 - name: Show Minimum OPatch Version
   debug: var=minimum_opatch_version
+
+- name: Fail if OPatch Version Is Less Than Required Minimum Version
+  fail:
+    msg: "OPatch version is less than the required minimum version"
+  when: opatch_id < minimum_opatch_version
