Restart mounted database before duplication
Otherwise export of existing audit stub data will fail.

--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/set_alert_log_filter_expression.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/set_alert_log_filter_expression.yml
@@ -22,3 +22,4 @@
       file:
         path: "{{ stage }}/set_alert_log_filter_expression.sql"
         state: absent
+      tags: remove_temporary_files
