add preprod to ldap rbac uplift options (#491)

--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -9,6 +9,8 @@ on:
             - "dev"
             - "test"
             - "stage"
+            - "preprod"
+
       rbac_tag:
         required: true
         type: string
