--- a/playbooks/oracle_duplicate/rman-pre-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-pre-duplicate.yml
@@ -10,11 +10,26 @@
       register: get_database_state
       changed_when: false
 
+    # If the database is running but not open it may be due to a previous duplicate failure,
+    # so we make one attempt to bounce the database into the open state.  If it fails we
+    # just ignore it, as it is possible the database is completely broken for some previous
+    # reason.  In this case we just continue without attempting to export any data.
+    - name: Open Database
+      when: "'ORA-01507: database not mounted' in get_database_state.stdout or 'MOUNTED' in get_database_state.stdout"
+      ignore_errors: true
+      block:
+        - include_tasks: shutdown_database.yml
+        - include_tasks: startup_database.yml
+        - name: Re-Check Database State
+          script: ../../common/files/get_database_state.sh
+          register: new_database_state
+          changed_when: false
+
     - name: Set Fact For Database State
       delegate_to: localhost
       delegate_facts: true
       set_fact:
-        database_open: "{{ ('READ WRITE' in get_database_state.stdout) }}"
+        database_open: "{{ ('READ WRITE' in get_database_state.stdout) or ('READ WRITE' in new_database_state.stdout | default('')) }}"
 
     - name: Include Tasks
       when: hostvars.localhost.database_open
@@ -29,16 +44,6 @@
         - name: Export Automatic Workload Repository (AWR)
           include_tasks: ../awr_export/playbook.yml
           when: aws_environment | regex_search('preproduction')
-
-    # - name: Trigger GitHub Actions workflow to switch probation integration services to read-only mode
-    #   when: environment_name == 'delius-pre-prod' and duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'delius'
-    #   shell: |
-    #     token=$(aws ssm get-parameter --name '/delius-pre-prod/delius/probation-integration/github/token' --region {{ region }} --output text --with-decryption --query Parameter.Value)
-    #     curl -fsSL -X POST -H 'Accept: application/vnd.github+json' -H "Authorization: token $token" \
-    #       --data '{"ref": "main", "inputs": {"action": "enable", "environment": "preprod"}}' \
-    #       https://api.github.com/repos/ministryofjustice/hmpps-probation-integration-services/actions/workflows/readonly.yml/dispatches
-    #   environment:
-    #     environment_name: "{{ environment_name }}"
 
 - name: Export dfi schmeas only for STGMIS
   import_playbook: dfi-schemas.yml
