--- a/playbooks/oracle_snapshot_standby/convert_to_physical_standby.yml
+++ b/playbooks/oracle_snapshot_standby/convert_to_physical_standby.yml
@@ -21,6 +21,16 @@
       include_tasks: push_audit_data_to_primary.yml
       when: push_audit_data | bool | default(true)
 
+    # Once the Audit Data has been pushed to the Primary, we should re-enable Checksumming
+    # which would have been previously disabled whilst using the Snapshot Standby
+    - name: Re-Enable Audit Replication Checksumming
+      script: |
+        control_checksum_calculation.sh ENABLED
+      delegate_to: "{{ primary_hostname }}"
+      when: is_audit_client
+      register: enable_checksumming
+      changed_when: enable_checksumming.stdout is search ('Audit checksumming enabled.')
+
     - name: Convert snapshot standby database to physical standby database
       shell: |
         . ~/.bash_profile
@@ -28,8 +38,7 @@
         INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
         ENVIRONMENT_NAME=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=environment-name"  --query "Tags[].Value" --output text)
         DELIUS_ENVIRONMENT=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=delius-environment"  --query "Tags[].Value" --output text)
-        APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text)
-        SYS_PASSWORD=$(aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-dba-passwords --region {{ region }} --query SecretString --output text| jq -r .sys) 
+        SYS_PASSWORD=$(aws secretsmanager get-secret-value --secret-id ${ENVIRONMENT_NAME%-*}-${DELIUS_ENVIRONMENT}-oracle-db-dba-passwords --region {{ region }} --query SecretString --output text| jq -r .sys) 
         dgmgrl / << EOF
         connect sys/${SYS_PASSWORD}@{{ primary_database }};
         convert database '{{ database_standby_unique | lower }}' to physical standby;
