--- a/.github/workflows/oracle-observer-image-build.yml
+++ b/.github/workflows/oracle-observer-image-build.yml
@@ -28,7 +28,7 @@ permissions:
 jobs:
   build-image:
     runs-on: ubuntu-latest
-    environment: delius-core-development
+    environment: delius-core-dev-preapproved
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
     timeout-minutes: 1440
@@ -40,17 +40,15 @@ jobs:
         with:
           fetch-depth: 0
 
-
       - name: Configure AWS Credentials
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          role-duration-seconds: 21600
+          role-duration-seconds: 3600
           aws-region: "eu-west-2"
             
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
