--- a/.github/workflows/oracle-observer-image-build.yml
+++ b/.github/workflows/oracle-observer-image-build.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: oracle-client-zip
-          path: /tmp/LINUX.X64_193000_client.zip
+          path: ./docker/oracle-observer/LINUX.X64_193000_client.zip
 
       - name: Set up Docker Buildx
         id: setup_buildx
