--- a/.github/workflows/ansible-aws-image-build.yml
+++ b/.github/workflows/ansible-aws-image-build.yml
@@ -56,7 +56,7 @@ jobs:
           path: /tmp/ansible-aws-image.tar
           retention-days: 1
 
-  scan-image:
+  scan-observer-image:
     name: Scan Image
     needs: build-image
     permissions:
@@ -93,12 +93,12 @@ jobs:
           scan-type: 'image'
           trivyignores: 'docker/delius-ansible-aws/.trivyignore'
           ignore-unfixed: 'true'
-          output: 'trivy-results.sarif'
+          output: 'trivy-results-observer.sarif'
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         if: failure() # If Trivy found vulnerabilities
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: 'trivy-results-observer.sarif'
 
   publish-image:
     name: Publish image
