--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -4,6 +4,7 @@ on:
     - cron: '00 12 * * TUE'
     - cron: '00 14 * * TUE'
     - cron: '00 10 * * THU'
+    - cron: '00 14 * * THU'
 
 jobs:
   prepare-run-matrix:
