Add command to keep container running

--- a/docker/oracle-observer/Dockerfile
+++ b/docker/oracle-observer/Dockerfile
@@ -53,4 +53,5 @@ RUN rm -rf /opt/aws
 
 USER oracle:oinstall
 
-CMD ["bash"]
+# Dummy command to keep container running during development
+CMD ["tail","-f","/dev/null"]
